--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -44,17 +44,33 @@
   font-size: 12px;
   line-height: 19.44px;
 
+  @media (min-width: 768px) {
+    margin: 30px 0 0 calc(50% - 40px);
+    text-align: left;
+  }
+
   &::before {
     content: url(../images/about_image.png);
     display: block;
     margin-left: auto;
     margin-right: auto;
+
+    @media (min-width: 768px) {
+      min-width: calc(50vw - 50px);
+      position: absolute;
+      left: 20px;
+      margin: 0;
+    }
   }
 }
 
 .about_description-item {
   padding: 0 50px;
   margin-bottom: 10px;
+
+  @media (min-width: 768px) {
+    padding: 20px 30px 0 10px;
+  }
 }
 
 .about_description-item:first-child {
@@ -80,6 +96,10 @@
   border: 0 solid transparent;
   border-radius: 10px;
   transition: background-color 300ms, color 300ms;
+
+  @media (min-width: 768px) {
+    margin: 30px 0 0 calc(50vw - 40px);
+  }
 
   &:hover {
     background-color: $hover_button_color;
