--- a/sass/_modal_byunow.scss
+++ b/sass/_modal_byunow.scss
@@ -6,6 +6,11 @@ body.modal-buynow-open {
 
 .modal.buynow {
   padding: 30px;
+
+  @media (min-width: 768px) {
+    min-width: 568px;
+    padding: 30px 45px;
+  }
 }
 
 .modal_buynow_title {
@@ -19,7 +24,6 @@ body.modal-buynow-open {
 
 .modal_buynow_list {
   padding: 0;
-  max-width: 320px;
   margin-left: auto;
   margin-right: auto;
 
@@ -79,6 +83,10 @@ body.modal-buynow-open {
     border-radius: 66px;
     box-shadow: 0 5.34px 20.03px #00000040;
   }
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .modal_buynow_list-item {
@@ -90,6 +98,14 @@ body.modal-buynow-open {
   margin-right: auto;
   margin-bottom: 20px;
   text-align: center;
+
+  @media (min-width: 768px) {
+    width: 132px;
+
+    &:not(:last-child) {
+      margin-right: 40px;
+    }
+  }
 
   & p {
     margin: 0;
