--- a/sass/_modal_readmore.scss
+++ b/sass/_modal_readmore.scss
@@ -6,6 +6,11 @@ body.modal-readmore-open {
 
 .modal.readmore {
   padding: 30px 20px;
+
+  @media (min-width: 768px) {
+    width: 568px;
+    padding: 30px 60px;
+  }
 }
 
 .modal_readmore_title {
@@ -23,4 +28,14 @@ body.modal-readmore-open {
   font-size: 14px;
   line-height: 140%;
   text-align: left;
+
+  @media (min-width: 768) {
+    width: 568px;
+  }
+}
+
+iframe {
+  @media (min-width: 768px) {
+    width: 448px;
+  }
 }
