--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -15,6 +15,21 @@
     background-repeat: repeat-y;
     background-size: 100vw;
   }
+
+  @media (min-width: 768px) {
+    background-image: url(../images/background_tablet.jpg);
+    background-repeat: repeat-y;
+    background-size: 100vw;
+    width: 100vw;
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/background_tablet@2x.jpg);
+      background-repeat: repeat-y;
+      background-size: 100vw;
+    }
+  }
 }
 
 .products-narrative {
@@ -41,7 +56,7 @@
 
 .products_list {
   padding: 0;
-  max-width: 320px;
+  // max-width: 320px;
   margin-left: auto;
   margin-right: auto;
 
@@ -101,6 +116,12 @@
     border-radius: 100px;
     box-shadow: 0 5.34px 20.03px #00000040;
   }
+
+  @media (min-width: 768px) {
+    max-width: 100%;
+    display: flex;
+    // justify-content: space-between;
+  }
 }
 
 .products_list-item {
@@ -109,12 +130,20 @@
   border: 1px solid transparent;
   border-radius: 24px;
 
+  @media (min-width: 768px) {
+    min-width: calc((100vw - 100px) / 3);
+  }
+
   &:first-child {
     background-color: #aec6a5;
   }
 
   &:nth-child(2n) {
     background-color: #efd478;
+
+    @media (min-width: 768px) {
+      margin: 120px 20px 0 20px;
+    }
   }
 
   &:last-child {
@@ -123,12 +152,18 @@
 }
 
 .products_list-item p {
+  display: block;
+  height: 300px;
   font-family: $basic_font;
   font-size: 14px;
   font-weight: 400;
   line-height: 24.64px;
   text-align: center;
-  padding: 0 60px 90px 60px;
+  padding: 40px 60px 90px 60px;
+
+  @media (min-width: 768px) {
+    padding: 40px 30px 90px 30px;
+  }
 }
 
 .products_list-name {
@@ -143,11 +178,11 @@
 .products_list-item_button {
   display: block;
   cursor: pointer;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 40px;
   height: 16px;
-  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid transparent;
 }
